test/rewriter/errors/expr_unsupported_record_field.ml
let unsupported_record_field = [%yojson {A.field = 0}]
