test/rewriter/errors/expr_unsupported_record_field.expected
File "expr_unsupported_record_field.ml", line 1, characters 41-48:
Error: ppx_yojson: unsupported record field